--- a/cursos.html
+++ b/cursos.html
@@ -21,16 +21,15 @@
 <menu-bar></menu-bar>
 
 <div class="js-side-left">
-  <a href="#informatica">Curso de Informática Básica e Avançada</a>
-  <a href="#designgrafico">Curso Completo de Design Gráfico</a>
-  <a href="#webdesign">Curso de Web Design</a>
-  <a href="#javascript">Curso Completo de Javascript</a>
-  <a href="#webapp">Desenvolvimento de Aplicações Web</a>
-  <a href="#cpp">Curso de Programação em C++</a>
+  <a href="#informatica">Informática Básica e Avançada</a>
+  <a href="#designgrafico">Design Gráfico</a>
+  <a href="#webdesign">Web Design</a>
+  <a href="#javascript">Javascript</a>
+  <a href="#webapp">Aplicações Web</a>
 </div>
 
 <div class="js-page">
-  <div class="js-post">
+  <div class="js-post" style="margin-top: 0;">
     <h1>Cursos</h1>
     <p>
       Confira aqui a lista atualizada de cursos e apostilas disponibilizadas pelo autor.
@@ -38,123 +37,122 @@
     <p>
       Ao clicar no link para se matricular no curso presencial você será direcionado à página de contato.
       Verifique a disponibilidade do curso on-line caso seja essa sua opção.
-      Você pode adquirir aqui o material didático impresso, entretando ao se matricular no curso
+      Você pode adquirir aqui o material didático impresso, entretanto ao se matricular no curso
       presencial você já obterá o material junto com o curso, verifique com seu instrutor.
     </p>
   </div>
   <!--#region CURSOS -->
-  <div class="js-post" id="informatica">
+  <div class="js-post js-curso" id="informatica">
     <h3>Curso de Informática Básica e Avançada</h3>
-    <img src="./files/informaticaCapa.png" alt="">
-    <div>
-      <p>
-        Aprenda os conceitos iniciais de informática como navegar na internet, editar textos, criar elementos gráficos,
-        configurar o computador e muito mais. Inicie ainda os conhecimentos de informática avançada como download e
-        instalação de programas, antivírus, restauração, backup e formatação, segurança digital entre outros. Um curso
-        voltado para quem está começando e para quem quer se aprofundar e decidir sua carreira profissional no setor de
-        informática.
-      </p>
+    <div class="content">
+      <img src="./files/informaticaCapa.png">
+      <div>
+        <p>
+          Aprenda os conceitos iniciais de informática como navegar na internet, editar textos, criar elementos gráficos,
+          configurar o computador e muito mais. Inicie ainda os conhecimentos de informática avançada como download e
+          instalação de programas, antivírus, restauração, backup e formatação, segurança digital entre outros. Um curso
+          voltado para quem está começando e para quem quer se aprofundar e decidir sua carreira profissional no setor de
+          informática.
+        </p>
+      </div>
     </div>
     <div
       style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
       <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada" target="_blank">Apostila impressa</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-informatica-basica-e-avancada"
+        target="_blank">Apostila impressa</a>
     </div>
   </div>
-  <div class="js-post" id="designgrafico">
+  <div class="js-post js-curso" id="designgrafico">
     <h3>Curso Completo de Design Gráfico</h3>
-    <img src="./files/designCapa.webp" alt="">
-    <div>
-      <p>
-        Neste curso aprenderemos:
-      </p>
-      <p>
-        Inkscape, Corel Draw, Illustrator, GIMP, Photoshop, Publisher.
-      </p>
-      <p>
-        Ainda:
-      </p>
-      <p>
-        Fundamentos do design gráfico, setores do design gráfico, vetor x bitmap, tipografia, paleta de cor, sombra e
-        brilho, teoria das cores, formas básicas, formas primitivas e curvas, layout, tamanho, espaço vazio e espaço
-        negativo, profundidade, perspectiva e simetria, plano cartesiano, vértice, borda e face, interseção, união e
-        subtração, matiz, saturação e iluminação, camadas, opacidade, transparência e mesclagem, pincéis, filtros e
-        efeitos especiais, tratamento e manipulação de imagens.
-      </p>
+    <div class="content">
+      <img src="./files/designCapa.webp" alt="">
+      <div>
+        <p>
+          Neste curso aprenderemos:
+        </p>
+        <p>
+          Inkscape, Corel Draw, Illustrator, GIMP, Photoshop, Publisher.
+        </p>
+        <p>
+          Ainda:
+        </p>
+        <p>
+          Fundamentos do design gráfico, setores do design gráfico, vetor x bitmap, tipografia, paleta de cor, sombra e
+          brilho, teoria das cores, formas básicas, formas primitivas e curvas, layout, tamanho, espaço vazio e espaço
+          negativo, profundidade, perspectiva e simetria, plano cartesiano, vértice, borda e face, interseção, união e
+          subtração, matiz, saturação e iluminação, camadas, opacidade, transparência e mesclagem, pincéis, filtros e
+          efeitos especiais, tratamento e manipulação de imagens.
+        </p>
+      </div>
     </div>
     <div
       style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
       <a class="js-button" style="opacity: 0.3;">Matrícula do curso on-line</a>
       <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico" target="_blank">Apostila impressa</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-completo-de-design-grafico"
+        target="_blank">Apostila impressa</a>
     </div>
   </div>
-  <div class="js-post" id="webdesign">
+  <div class="js-post js-curso" id="webdesign">
     <h3>Curso de Web Design</h3>
     <p>HTML, CSS e Web Design Responsivo</p>
-    <img src="./files/webdesignCapa.png" alt="">
-    <div>
-      <p>
-        O Web Design é o setor voltado para a criação de páginas Web Estáticas destinadas a exibir conteúdo, como sites,
-        blogs entre outras, é um amplo setor e muito requisitado no mercado. Neste curso você aprenderá como criar sites
-        e páginas web diversas utilizando as tecnologias mais modernas com HTML, CSS e Javascript.
-      </p>
+    <div class="content">
+      <img src="./files/webdesignCapa.png" alt="">
+      <div>
+        <p>
+          O Web Design é o setor voltado para a criação de páginas Web Estáticas destinadas a exibir conteúdo, como sites,
+          blogs entre outras, é um amplo setor e muito requisitado no mercado. Neste curso você aprenderá como criar sites
+          e páginas web diversas utilizando as tecnologias mais modernas com HTML, CSS e Javascript.
+        </p>
+      </div>
     </div>
     <div
       style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
       <a class="js-button" style="opacity: 0.3;">Matrícula do curso on-line</a>
       <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">Apostila impressa</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-web-design-2" target="_blank">Apostila
+        impressa</a>
     </div>
   </div>
-  <div class="js-post" id="javascript">
+  <div class="js-post js-curso" id="javascript">
     <h3>Curso Completo de Javascript</h3>
-    <img src="./files/javascriptCapa.png" alt="">
-    <div>
-      <p>
-        O Javascript é uma linguagem de programação, diferente do HTML e do CSS, neste curso você iniciará sua carreira
-        como programador com a linguagem mais utilizada em todo o mundo! Com o Javascript você aprenderá como fazer seu
-        site se comunicar com outras aplicações, incluirá lógica e dinamicidade à sua página e ainda aprenderá do que o
-        Javascript é capaz, de desenvolvimento de jogos a servidores.
-      </p>
+    <div class="content">
+      <img src="./files/javascriptCapa.png" alt="">
+      <div>
+        <p>
+          O Javascript é uma linguagem de programação, diferente do HTML e do CSS, neste curso você iniciará sua carreira
+          como programador com a linguagem mais utilizada em todo o mundo! Com o Javascript você aprenderá como fazer seu
+          site se comunicar com outras aplicações, incluirá lógica e dinamicidade à sua página e ainda aprenderá do que o
+          Javascript é capaz, de desenvolvimento de jogos a servidores.
+        </p>
+      </div>
     </div>
     <div
       style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
       <a class="js-button" style="opacity: 0.3;">Matrícula do curso on-line</a>
       <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-javascript" target="_blank">Apostila impressa</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/curso-de-javascript" target="_blank">Apostila
+        impressa</a>
     </div>
   </div>
-  <div class="js-post" id="webapp">
+  <div class="js-post js-curso" id="webapp">
     <h3>
       Desenvolvimento de Aplicações Web
     </h3>
-    <img src="./files/cursoCapa.jpg" alt="">
-    <div>
-      <p>
-        Este curso está em construção.
-      </p>
+    <div class="content">
+      <img src="./files/webappCapa.png" alt="">
+      <div>
+        <p>
+          O Desenvolvimento de Aplicações Web é a terceira etapa no Desenvolvimento Web, onde você é capaz de criar páginas que salvam dados de usuários e informações de maneira persistente utilizando a tecnologia do NodeJS. É aqui que você aprenderá a criar servidores, manipular bases de dados, usar criptografia, estabelecer comunicações e implantar aplicações em diferentes locais, em seu próprio servidor, em nuvem, num aplicativo móvel, num programa desktop entre outros.
+        </p>
+      </div>
     </div>
     <div
       style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
       <a class="js-button" style="opacity: 0.3;">Matrícula do curso on-line</a>
       <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="" target="_blank">Apostila impressa</a>
-    </div>
-  </div>
-  <div class="js-post" id="cpp">
-    <h3>Curso de Programação em C++</h3>
-    <img src="./files/cursoCapa.jpg" alt="">
-    <div>
-      <p>
-        Este curso está em construção.
-      </p>
-    </div>
-    <div
-      style="display:grid; place-items: justify; gap: 10px; width: 100%; grid-template-rows: 1fr 1fr 1fr 1fr; grid-column: 1/3;">
-      <a class="js-button" style="opacity: 0.3;">Matrícula do curso on-line</a>
-      <a class="js-button" href="contato.html">Matrícula do curso presencial</a>
-      <a class="js-button" href="" target="_blank">Apostila impressa</a>
+      <a class="js-button" href="https://clubedeautores.com.br/livro/desenvolvimento-de-aplicacoes-web" target="_blank">Apostila impressa</a>
     </div>
   </div>
 
@@ -180,43 +178,15 @@
 
 
 <style>
-  .child {
-    background-color: var(--pretoMedio);
+  .js-curso {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+  }
+  .js-curso .content {
     display: grid;
-    grid-template-columns: 0.5fr 1.5fr;
-    user-select: none;
-    vertical-align: middle;
-  }
-
-  .child div {
-    margin: 15px;
-    width: 100%;
-  }
-
-  .child img {
-    margin: 15px;
-    pointer-events: none;
-    border: 1px solid;
-    border-image: linear-gradient(45deg, yellow, #A50)1;
-    width: 200px;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-
-  @media (max-width: 600px) {
-    .child {
-      max-width: 100%;
-      margin: 15px 0 15px 0;
-      grid-template-columns: 1fr;
-      text-align: center;
-    }
-
-    .child img {
-      margin: auto;
-    }
+    grid-template-columns: 200px 1fr;
+    gap: 10px;
   }
 </style>
 <!--#endregion -->
