--- a/downloads.html
+++ b/downloads.html
@@ -2,16 +2,16 @@
 <html lang="pt-BR">
 
 <head>
-    <title>Downloads | Jorge Souza</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./javascript/index.js"></script>
-    <link rel="icon" type="image/x-icon" href="./logo.svg">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--SEO-->
-    <meta name="author" content="Jorge Souza Oliveira dos Santos" />
-    <meta name="description" content="Jorge Souza Oliveira dos Santos">
-    <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
+        <title>Downloads | Jorge Souza</title>
+        <link rel="stylesheet" href="./css/index.css">
+        <script src="./javascript/index.js"></script>
+        <link rel="icon" type="image/x-icon" href="./logo.svg">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--SEO-->
+        <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+        <meta name="description" content="Jorge Souza Oliveira dos Santos">
+        <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info, 
     desenvolvimento, web, design, web design, design grafico, tech, 
     visual studio, visual studio code, vs code, c#, javascript, dotnet,
     node js, dev express, html, css">
@@ -19,23 +19,36 @@
 
 <menu-bar></menu-bar>
 <div class="js-page">
-    <div class="js-post" style="display: grid; place-items: justify; gap: 15px">
-        <h1 style="width: fit-content; margin: auto; padding: 15px;">Downloads dos Cursos</h1>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1BdqsqsVZpEdk01gpMA608pbDoqemAUzD" target="_blank">Curso
-                de Informática Básica e Avançada</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1T14FNxgtS6zDU5he6A74MhUIRTLAlP5i?usp=sharing"
-                target="_blank">Curso Completo de Design Gráfico</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1ysC_Hta6de-hA6cI5Z6Zc_PdkSVElh6B?usp=sharing"
-                target="_blank">Curso de Modelagem 3D e Desenho Técnico</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1eCiMVTwoZE93wsB57dURkXkHCAl_MENE?usp=sharing"
-                target="_blank">Curso de Web Design</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/14wSufoQj0-dIW7taS6adiV9qBDmh59ea?usp=sharing"
-                target="_blank">Curso de Javascript</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1sjTUvdPB5gxgCQBoah9yeXAggevSDOgl?usp=sharing"
-                target="_blank">Curso de Desenvolvimento de Aplicações Web</a>
-        <a class="js-button" href="https://drive.google.com/drive/folders/1999UtlyN2TKgaSW8xA2e0zxbB_75aTs-?usp=sharing"
-                target="_blank">Curso Completo de C++</a>
-    </div>
+        <div class="js-post" style="display: grid; place-items: justify; gap: 15px">
+                <h1 style="width: fit-content; margin: auto; padding: 15px;">Downloads dos Cursos</h1>
+                <p>
+                        Nesta página você tem acesso à pasta do Google Drive com os arquivos referentes ao seu curso.
+                </p>
+                <a class="js-button" href="https://drive.google.com/drive/folders/1BdqsqsVZpEdk01gpMA608pbDoqemAUzD"
+                        target="_blank">
+                        Informática Básica e Avançada
+                </a>
+                <a class="js-button"
+                        href="https://drive.google.com/drive/folders/1T14FNxgtS6zDU5he6A74MhUIRTLAlP5i?usp=sharing"
+                        target="_blank">
+                        Design Gráfico
+                </a>
+                <a class="js-button"
+                        href="https://drive.google.com/drive/folders/1eCiMVTwoZE93wsB57dURkXkHCAl_MENE?usp=sharing"
+                        target="_blank">
+                        Web Design
+                </a>
+                <a class="js-button"
+                        href="https://drive.google.com/drive/folders/14wSufoQj0-dIW7taS6adiV9qBDmh59ea?usp=sharing"
+                        target="_blank">
+                        Javascript
+                </a>
+                <a class="js-button"
+                        href="https://drive.google.com/drive/folders/1sjTUvdPB5gxgCQBoah9yeXAggevSDOgl?usp=sharing"
+                        target="_blank">
+                        Aplicações Web
+                </a>
+        </div>
 </div>
 
 </html>
