--- a/downloads.html
+++ b/downloads.html
@@ -48,6 +48,11 @@
                         target="_blank">
                         Aplicações Web
                 </a>
+                <a class="js-button"
+                        href="https://drive.google.com/drive/folders/1co5Ye6vIsAVIUMgWw3wdlI4RTpmHLg_j?usp=sharing"
+                        target="_blank">
+                        Inteligência Artificial e Aprendizagem de Máquina
+                </a>
         </div>
 </div>
 
