--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <a class="cont" id="cont5" style="display: none;" href="cursos.html#webapp">
     <img src="files/webapp.webp">
   </a>
-  <a class="cont" id="cont6" style="display: none;" href="cursos.html#cpp">
-    <img src="files/cpp.webp">
+  <a class="cont" id="cont6" style="display: none;" href="cursos.html#iaml">
+    <img src="files/IA.svg">
   </a>
   <span class="dir-btn rolar-btn" onclick="avancar()">
     <p>&#9658;</p>
