--- a/game/game.html
+++ b/game/game.html
@@ -10,5 +10,5 @@
     <span id="vidas">3</span>
   </div>
   <canvas id="meuCanvas" width="512" height="480"></canvas>
-  <button id="reiniciar" onclick="Reiniciar()">Reiniciar</button>
+  <button id="reiniciar" onclick="Start()">Reiniciar</button>
 </div>
