--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
 
 <div class="js-page">
   <div class="js-post">
+    <p><i>
+      OBS.: Em razão de problemas recentes com a plataforma do Clube de Autores, as apostilas estão sendo
+      transferidas gradualmente para a Amazon, o que deve levar alguns dias, por enquanto, os links das apostilas aqui
+      no site não estão funcionando, peço sua compreensão. Obrigado!
+      Enquanto isso, você pode encontrar as que já foram transferidas na minha página do autor
+      na Amazon, <a class="js-link" target="_blank" href="https://www.amazon.com.br/kindle-dbs/entity/author?asin=B0CM13195T">por meio deste link</a>.
+    </i></p>
+  </div>
+  <div class="js-post">
     <h1>Seja muito bem-vindo!</h1>
     <p>Seja para contratar um projeto, adquirir uma apostila do seu setor, ou aprender, este é seu lugar.</p>
   </div>
@@ -211,6 +220,9 @@
     </div>
   </div>
   <div class="js-post">
+    <img src="/files/bitmap.jpg">
+  </div>
+  <div class="js-post" style="display: none;">
     <p style="text-indent: 0; font-style: italic; text-align: center;">
       Então Jesus tornou a falar-lhes, dizendo: Eu sou a luz do mundo; quem me segue de modo algum andará em trevas, mas
       terá a luz da vida.<br>
